--- a/admin/app/views/opta_event_list.scala.html
+++ b/admin/app/views/opta_event_list.scala.html
@@ -1,6 +1,6 @@
 @(opta_events: List[model.opta.OptaEvent])
 
-@import controllers.admin.DashboardController
+@import controllers.admin.routes._
 
 @main("Opta Events - Admin") {
 
