--- a/admin/app/views/opta_match_event_list.scala.html
+++ b/admin/app/views/opta_match_event_list.scala.html
@@ -1,6 +1,6 @@
 @(match_events: List[model.opta.OptaMatchEvent])
 
-@import controllers.admin.DashboardController
+@import controllers.admin.routes._
 
 @main("Opta Match Events - Admin") {
 
