--- a/admin/app/views/opta_soccer_player_list.scala.html
+++ b/admin/app/views/opta_soccer_player_list.scala.html
@@ -1,6 +1,6 @@
 @(soccers: List[model.opta.OptaPlayer])
 
-@import controllers.admin.DashboardController
+@import controllers.admin.routes._
 
 @main("Opta Soccer Players - Admin") {
 
