--- a/admin/app/views/opta_soccer_team_list.scala.html
+++ b/admin/app/views/opta_soccer_team_list.scala.html
@@ -1,6 +1,6 @@
 @(teams: List[model.opta.OptaTeam])
 
-@import controllers.admin.DashboardController
+@import controllers.admin.routes._
 
 @main("Opta Soccer Teams - Admin") {
 
