--- a/admin/app/views/contest_entry_add.scala.html
+++ b/admin/app/views/contest_entry_add.scala.html
@@ -2,7 +2,7 @@
 
 @import helper._
 @import helper.twitterBootstrap._
-@import controllers.admin.DashboardController
+@import controllers.admin.routes._
 
 @if(contestEntryForm.hasErrors) {
     @controllers.admin.FlashMessage.danger("Contest Entry Form has errors")
@@ -90,7 +90,7 @@
 
 <h2 class="sub-header"></h2>
 
-@helper.form(action = AdminController.submitContestEntry, 'class -> "form-horizontal") {
+@helper.form(action = ContestEntryController.submitContestEntry, 'class -> "form-horizontal") {
     <fieldset>
 
         <!-- Form Name -->
@@ -156,7 +156,7 @@
             <label class="control-label" for="ok"></label>
             <div class="controls">
                 <button id="ok" name="ok" type="submit" class="btn btn-success">Create</button>
-                <a href="@AdminController.contestEntries" class="btn btn-danger">Cancel</a>
+                <a href="@ContestEntryController.index" class="btn btn-danger">Cancel</a>
             </div>
         </div>
 
