--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -1,6 +1,6 @@
 @()
 
-@import controllers.admin.DashboardController
+@import controllers.admin.routes._
 
 @main("DailySoccer - Admin") {
 
@@ -19,9 +19,9 @@
 <br/>
 <br/>
 <div>
-    <a href="@AdminController.showImportTeams"><button class="btn btn-warning">Import Teams...</button></a>
-    <a href="@AdminController.showImportSoccers"><button class="btn btn-warning">Import Soccers...</button></a>
-    <a href="@AdminController.showImportMatchEvents"><button class="btn btn-warning">Import MatchEvents...</button></a>
+    <a href="@ImportController.showImportTeams"><button class="btn btn-warning">Import Teams...</button></a>
+    <a href="@ImportController.showImportSoccers"><button class="btn btn-warning">Import Soccers...</button></a>
+    <a href="@ImportController.showImportMatchEvents"><button class="btn btn-warning">Import MatchEvents...</button></a>
 </div>
 
 <!--
