--- a/admin/app/views/import_match_events.scala.html
+++ b/admin/app/views/import_match_events.scala.html
@@ -1,5 +1,7 @@
 @(matchs_new: List[model.opta.OptaMatchEvent], matchs_changed: List[model.opta.OptaMatchEvent], matchs_invalid: List[model.opta.OptaMatchEvent])
 
+@import controllers.admin.routes.ImportController
+
 @main("Import Match Events - Admin") {
 
 <h1 class="page-header">Import Match Events</h1>
@@ -8,7 +10,7 @@
 
 <!--div class="col-md-12">
     @if((matchs_new != null && !matchs_new.isEmpty) || (matchs_changed != null && !matchs_changed.isEmpty)) {
-    <a href="@AdminController.importAllMatchEvents"><button name="ok" type="submit" class="btn btn-success">Import All</button></a>
+    <a href="@ImportController.importAllMatchEvents"><button name="ok" type="submit" class="btn btn-success">Import All</button></a>
     }
 </div-->
 
@@ -42,7 +44,7 @@
         </tbody>
     </table>
 
-    <div><a href="@AdminController.importAllNewMatchEvents"><button name="ok" type="submit" class="btn btn-success">Import New (@matchs_new.size)</button></a></div>
+    <div><a href="@ImportController.importAllNewMatchEvents"><button name="ok" type="submit" class="btn btn-success">Import New (@matchs_new.size)</button></a></div>
     <br/>
     }
 </div>
@@ -71,7 +73,7 @@
         </tbody>
     </table>
 
-    <div><a href="@AdminController.importAllChangedMatchEvents"><button name="ok" type="submit" class="btn btn-success">Import Changed (@matchs_changed.size)</button></a></div>
+    <div><a href="@ImportController.importAllChangedMatchEvents"><button name="ok" type="submit" class="btn btn-success">Import Changed (@matchs_changed.size)</button></a></div>
     <br/>
     }
 </div>
