--- a/admin/app/views/import_soccers.scala.html
+++ b/admin/app/views/import_soccers.scala.html
@@ -1,5 +1,7 @@
 @(soccers_new: List[model.opta.OptaPlayer], soccers_changed: List[model.opta.OptaPlayer], soccers_invalid: List[model.opta.OptaPlayer])
 
+@import controllers.admin.routes.ImportController
+
 @main("Import Soccers - Admin") {
 
 <h1 class="page-header">Import Soccers</h1>
@@ -8,7 +10,7 @@
 
 <!--div class="col-md-12">
     @if((soccers_new != null && !soccers_new.isEmpty) || (soccers_changed != null && !soccers_changed.isEmpty)) {
-    <a href="@AdminController.importAllSoccers"><button name="ok" type="submit" class="btn btn-success">Import All</button></a>
+    <a href="@ImportController.importAllSoccers"><button name="ok" type="submit" class="btn btn-success">Import All</button></a>
     }
 </div-->
 
@@ -39,7 +41,7 @@
         </tbody>
     </table>
 
-    <div><a href="@AdminController.importAllNewSoccers"><button name="ok" type="submit" class="btn btn-success">Import New (@soccers_new.size)</button></a></div>
+    <div><a href="@ImportController.importAllNewSoccers"><button name="ok" type="submit" class="btn btn-success">Import New (@soccers_new.size)</button></a></div>
     <br/>
     }
 </div>
@@ -71,7 +73,7 @@
         </tbody>
     </table>
 
-    <div><a href="@AdminController.importAllChangedSoccers"><button name="ok" type="submit" class="btn btn-success">Import Changed (@soccers_changed.size)</button></a></div>
+    <div><a href="@ImportController.importAllChangedSoccers"><button name="ok" type="submit" class="btn btn-success">Import Changed (@soccers_changed.size)</button></a></div>
     <br/>
     }
 </div>
