--- a/admin/app/views/main.scala.html
+++ b/admin/app/views/main.scala.html
@@ -1,7 +1,7 @@
 @(title: String, scripts: Html = Html(""))(content: Html)
 
 @import controllers.admin.FlashMessage
-@import controllers.admin.DashboardController
+@import controllers.admin.routes._
 
 @flash_message() = {
     @for(message <- FlashMessage.list) {
@@ -89,27 +89,27 @@
             </ul>
             <ul class="nav nav-sidebar">
                 <li><a href="@AdminController.lobby">Lobby</a></li>
-                <li><a href="@AdminController.users">Users</a></li>
-                <li><a href="@AdminController.liveContestEntries">Live Contest Entries</a></li>
-                <li><a href="@AdminController.liveMatchEvents">Live Match Events</a></li>
-                <li><a href="@AdminController.pointsTranslations">Points Translations</a></li>
-                <li><a href="@AdminController.contestEntries">Contest Entries</a></li>
-                <li><a href="@AdminController.contests">Contests</a></li>
+                <li><a href="@UserController.index">Users</a></li>
+                <li><a href="@LiveContestEntryController.index">Live Contest Entries</a></li>
+                <li><a href="@LiveMatchEventController.index">Live Match Events</a></li>
+                <li><a href="@PointsTranslationController.index">Points Translations</a></li>
+                <li><a href="@ContestEntryController.index">Contest Entries</a></li>
+                <li><a href="@ContestController.index">Contests</a></li>
             </ul>
             <ul class="nav nav-sidebar">
-                <li><a href="@AdminController.templateContests">Template Contests</a></li>
-                <li><a href="@AdminController.templateMatchEvents">Template Match Events</a></li>
-                <li><a href="@AdminController.templateSoccerTeams">Template Soccer Teams</a></li>
-                <li><a href="@AdminController.templateSoccerPlayers">Template Soccer Players</a></li>
+                <li><a href="@TemplateContestController.index">Template Contests</a></li>
+                <li><a href="@TemplateMatchEventController.index">Template Match Events</a></li>
+                <li><a href="@TemplateSoccerTeamController.index">Template Soccer Teams</a></li>
+                <li><a href="@TemplateSoccerPlayerController.index">Template Soccer Players</a></li>
             </ul>
             <ul class="nav nav-sidebar">
-                <li><a href="@AdminController.optaSoccerPlayers">Opta Players</a></li>
-                <li><a href="@AdminController.optaSoccerTeams">Opta Teams</a></li>
-                <li><a href="@AdminController.optaMatchEvents">Opta Match Events</a></li>
-                <li><a href="@AdminController.optaEvents">Opta Events</a></li>
+                <li><a href="@OptaController.optaSoccerPlayers">Opta Players</a></li>
+                <li><a href="@OptaController.optaSoccerTeams">Opta Teams</a></li>
+                <li><a href="@OptaController.optaMatchEvents">Opta Match Events</a></li>
+                <li><a href="@OptaController.optaEvents">Opta Events</a></li>
             </ul>
             <ul class="nav nav-sidebar">
-                <li><a href="@AdminController.simulator">Simulator</a></li>
+                <li><a href="@SimulatorController.index">Simulator</a></li>
             </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
