--- a/admin/app/views/points_translation_add.scala.html
+++ b/admin/app/views/points_translation_add.scala.html
@@ -3,6 +3,7 @@
 @import helper._
 @import helper.twitterBootstrap._
 @import utils.OptaUtils.OptaEventType
+@import controllers.admin.routes._
 
 @if(pointsTranslationForm.hasErrors) {
     @controllers.admin.FlashMessage.danger("Points Translation Form has errors")
@@ -23,7 +24,7 @@
 
 <h2 class="sub-header"></h2>
 
-@helper.form(action = AdminController.submitPointsTranslation, 'class -> "form-horizontal") {
+@helper.form(action = PointsTranslationController.submitPointsTranslation, 'class -> "form-horizontal") {
 <fieldset>
 
     <!-- Form Name -->
@@ -55,7 +56,7 @@
         <label class="control-label" for="ok"></label>
         <div class="controls">
             <button id="ok" name="ok" type="submit" class="btn btn-success">Create</button>
-            <a href="@AdminController.pointsTranslations" class="btn btn-danger">Cancel</a>
+            <a href="@PointsTranslationController.index" class="btn btn-danger">Cancel</a>
         </div>
     </div>
 
@@ -65,6 +66,6 @@
 <br/>
 
 <br/>
-<a href='@AdminController.pointsTranslations'>Back to Points Translation</a>
+<a href='@PointsTranslationController.index'>Back to Points Translation</a>
 
 }
