--- a/admin/app/views/template_soccer_team.scala.html
+++ b/admin/app/views/template_soccer_team.scala.html
@@ -1,5 +1,7 @@
 @(template_soccer_team: model.TemplateSoccerTeam, template_soccer_players: List[model.TemplateSoccerPlayer])
 
+@import controllers.admin.routes._
+
 @main("Template Soccer Team - Admin") {
 
 <h1 class="page-header">Template Soccer Team: @template_soccer_team.templateSoccerTeamId</h1>
@@ -33,6 +35,6 @@
     </table>
 </div>
 
-<a href='@AdminController.templateSoccerTeams'>Back to Template Soccer Teams</a>
+<a href='@TemplateSoccerTeamController.index'>Back to Template Soccer Teams</a>
 
 }
