Controller: interface (index, show, newForm, create, destroy)

--- a/admin/app/views/contest_entry_add.scala.html
+++ b/admin/app/views/contest_entry_add.scala.html
@@ -90,7 +90,7 @@
 
 <h2 class="sub-header"></h2>
 
-@helper.form(action = ContestEntryController.submitContestEntry, 'class -> "form-horizontal") {
+@helper.form(action = ContestEntryController.create, 'class -> "form-horizontal") {
     <fieldset>
 
         <!-- Form Name -->
