--- a/admin/app/views/contest_entry_list.scala.html
+++ b/admin/app/views/contest_entry_list.scala.html
@@ -6,7 +6,7 @@
 
 <h1 class="page-header">Contest Entries</h1>
 
-<a href="@ContestEntryController.addContestEntry"><button class="btn btn-success">Add Contest Entry</button></a>
+<a href="@ContestEntryController.newForm"><button class="btn btn-success">Add Contest Entry</button></a>
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
