--- a/admin/app/views/points_translation_add.scala.html
+++ b/admin/app/views/points_translation_add.scala.html
@@ -24,7 +24,7 @@
 
 <h2 class="sub-header"></h2>
 
-@helper.form(action = PointsTranslationController.submitPointsTranslation, 'class -> "form-horizontal") {
+@helper.form(action = PointsTranslationController.create, 'class -> "form-horizontal") {
 <fieldset>
 
     <!-- Form Name -->
