--- a/admin/app/views/template_contest_add.scala.html
+++ b/admin/app/views/template_contest_add.scala.html
@@ -21,7 +21,7 @@
 
 <h2 class="sub-header"></h2>
 
-@helper.form(action = TemplateContestController.submitTemplateContest, 'class -> "form-horizontal") {
+@helper.form(action = TemplateContestController.create, 'class -> "form-horizontal") {
 <fieldset>
 
     <!-- Form Name -->
