--- a/admin/app/views/template_soccer_team_list.scala.html
+++ b/admin/app/views/template_soccer_team_list.scala.html
@@ -22,7 +22,7 @@
         <tr>
             <td>@p.templateSoccerTeamId</td>
             <td>@p.optaTeamId</td>
-            <td><a href="@TemplateSoccerTeamController.templateSoccerTeam(p.templateSoccerTeamId.toString())">@p.name</a></td>
+            <td><a href="@TemplateSoccerTeamController.show(p.templateSoccerTeamId.toString())">@p.name</a></td>
             <td>@p.shortName</td>
         </tr>
         }
