--- a/admin/app/views/live_contest_entry_list.scala.html
+++ b/admin/app/views/live_contest_entry_list.scala.html
@@ -21,7 +21,7 @@
         <tr>
             <td>@p.contestEntryId</td>
             <td>@p.userId</td>
-            <td><a href="@LiveContestEntryController.liveContestEntry(p.contestEntryId.toString())">@p.contestId</a></td>
+            <td><a href="@LiveContestEntryController.show(p.contestEntryId.toString())">@p.contestId</a></td>
         </tr>
         }
         </tbody>
