--- a/admin/app/views/live_match_event_list.scala.html
+++ b/admin/app/views/live_match_event_list.scala.html
@@ -38,7 +38,7 @@
             <td>@p.liveMatchEventId</td>
             <td>@p.templateMatchEventId</td>
             <td>
-                <a href="@LiveMatchEventController.liveMatchEvent(p.liveMatchEventId.toString())">
+                <a href="@LiveMatchEventController.show(p.liveMatchEventId.toString())">
                     @p.soccerTeamA.name (@p.soccerTeamA.getFantasyPoints()) vS @p.soccerTeamB.name (@p.soccerTeamB.getFantasyPoints())</a></td>
             <td>@p.startDate.format("yyyy/MM/dd HH:mm:ss")</td>
         </tr>
