--- a/admin/app/views/lobby.scala.html
+++ b/admin/app/views/lobby.scala.html
@@ -22,10 +22,10 @@
         @for(p <- contests) {
         <tr>
             <td>@p.contestId</td>
-            <td><a href="@ContestController.contest(p.contestId.toString())">@p.name</a></td>
+            <td><a href="@ContestController.show(p.contestId.toString())">@p.name</a></td>
             <td>@p.currentUserIds</td>
             <td>@p.maxUsers</td>
-            <td><a href="@TemplateContestController.templateContest(p.templateContestId.toString())">
+            <td><a href="@TemplateContestController.show(p.templateContestId.toString())">
                 @templateMap(p.templateContestId).name (@p.templateContestId)</a></td>
         </tr>
         }
