Template Contest Add: fix (no se estaba registrando "maxEntries")

--- a/admin/app/views/template_contest_add.scala.html
+++ b/admin/app/views/template_contest_add.scala.html
@@ -55,7 +55,7 @@
     )
 
     @inputText(
-        templateContestForm("minInstances"),
+        templateContestForm("maxEntries"),
         '_label -> "Max Entries",
         'size -> 10
     )
