Contest List: fix maxUsers -> maxEntries

--- a/admin/app/views/contest_list.scala.html
+++ b/admin/app/views/contest_list.scala.html
@@ -57,7 +57,7 @@
             <td>@p.contestId</td>
             <td><a href="@ContestController.show(p.contestId.toString())">@p.name</a></td>
             <td>@p.currentUserIds.size()</td>
-            <td>@p.maxUsers</td>
+            <td>@p.maxEntries</td>
             <td><a href="@TemplateContestController.show(p.templateContestId.toString())">@p.templateContestId</a></td>
             <td>@contest_state(p.templateContestId.toString())</td>
             <td>
