--- a/admin/app/views/lobby.scala.html
+++ b/admin/app/views/lobby.scala.html
@@ -24,7 +24,7 @@
             <td>@p.contestId</td>
             <td><a href="@ContestController.show(p.contestId.toString())">@p.name</a></td>
             <td>@p.currentUserIds</td>
-            <td>@p.maxUsers</td>
+            <td>@p.maxEntries</td>
             <td><a href="@TemplateContestController.show(p.templateContestId.toString())">
                 @templateMap(p.templateContestId).name (@p.templateContestId)</a></td>
         </tr>
