enum PrizeType & TemplateContest.State: la funcionalidad de "options" es proporcionada por un método genérico de EnumUtils

--- a/admin/app/views/contest_list.scala.html
+++ b/admin/app/views/contest_list.scala.html
@@ -44,8 +44,8 @@
         <tr>
             <th>Id</th>
             <th>Name</th>
-            <th>CurrentUsers</th>
-            <th>maxUsers</th>
+            <th>Current Users</th>
+            <th>Max Entries</th>
             <th>TemplateContestId</th>
             <th>State</th>
             <th></th>
