--- a/admin/app/views/points_translation_list.scala.html
+++ b/admin/app/views/points_translation_list.scala.html
@@ -1,5 +1,6 @@
 @(points_translation: List[model.PointsTranslation])
-@import utils.OptaUtils.OptaEventType
+@import model.opta.OptaProcessor
+@import OptaProcessor.OptaEventType
 @import controllers.admin.routes._
 
 @main("Contests - Admin") {
