Movido OptaEventType a su fichero propio

--- a/admin/app/views/points_translation_add.scala.html
+++ b/admin/app/views/points_translation_add.scala.html
@@ -1,9 +1,8 @@
 @(pointsTranslationForm: Form[controllers.admin.PointsTranslationForm])
-@import model.opta.OptaProcessor
+@import model.opta.{OptaEventType, OptaProcessor}
 
 @import helper._
 @import helper.twitterBootstrap._
-@import OptaProcessor.OptaEventType
 @import controllers.admin.routes._
 
 @if(pointsTranslationForm.hasErrors) {
