--- a/admin/app/views/points_translation_list.scala.html
+++ b/admin/app/views/points_translation_list.scala.html
@@ -1,6 +1,5 @@
 @(points_translation: List[model.PointsTranslation])
-@import model.opta.OptaProcessor
-@import OptaProcessor.OptaEventType
+@import model.opta.{OptaEventType, OptaProcessor}
 @import controllers.admin.routes._
 
 @main("Contests - Admin") {
