--- a/admin/app/views/simulator.scala.html
+++ b/admin/app/views/simulator.scala.html
@@ -8,44 +8,36 @@
 @main("Simulator - Admin") {
 
 <h1 class="page-header">Simulator</h1>
-    @if(!OptaSimulator.existsInstance() || OptaSimulator.stoppedInstance()){
-        <div>
-            <a href="@SimulatorController.start"><button class="btn btn-primary">Start</button></a>
-        </div>
-    }
-    @if(OptaSimulator.launchedInstance()){
-        <div class="btn-group">
-        <!--div class="btn-group"-->
-            @if(OptaSimulator.pausedInstance()){
-                <a class="btn btn-primary" href="@SimulatorController.resume">
-                    <i class="glyphicon glyphicon-play"></i> Play
-                </a>
-            } else {
-                <a class="btn btn-primary" href="@SimulatorController.pause">
-                    <i class="glyphicon glyphicon-pause"></i> Pause
-                </a>
-            }
-            @if(OptaSimulator.pausedInstance()){
-                <a class="btn btn-primary" href="@SimulatorController.next">
-                <i class="glyphicon glyphicon-step-forward"></i> Next step
-                </a>
-            } else {
-                <a class="btn btn-primary disabled" href="@SimulatorController.next">
-                    <i class="glyphicon glyphicon-step-forward"></i> Next step
-                </a>
-            }
-            <a class="btn btn-primary" href="@SimulatorController.stop">
-                <i class="glyphicon glyphicon-stop"></i> Stop
+    <div class="btn-group">
+        @if(OptaSimulator.isPaused()){
+            <a class="btn btn-primary" href="@SimulatorController.start">
+                <i class="glyphicon glyphicon-play"></i> Play
             </a>
-        </div>
-        <hr>
-        @if(OptaSimulator.pausedInstance()){
-            @helper.form(action = SimulatorController.gotoNextPause) {
-                <input type="datetime-local" value="2014-06-14T00:00" name="date">
-                <button id="ok" name="ok" type="submit" class="btn btn-primary">
-                    <i class="glyphicon glyphicon-fast-forward"></i> Go To
-                </button>
-            }
+        } else {
+            <a class="btn btn-primary" href="@SimulatorController.pause">
+                <i class="glyphicon glyphicon-pause"></i> Pause
+            </a>
+        }
+        @if(OptaSimulator.isPaused()){
+            <a class="btn btn-primary" href="@SimulatorController.next">
+            <i class="glyphicon glyphicon-step-forward"></i> Next step
+            </a>
+        } else {
+            <a class="btn btn-primary disabled" href="@SimulatorController.next">
+                <i class="glyphicon glyphicon-step-forward"></i> Next step
+            </a>
+        }
+        <a class="btn btn-primary" href="@SimulatorController.reset">
+            <i class="glyphicon glyphicon-stop"></i> Reset
+        </a>
+    </div>
+    <hr>
+    @if(OptaSimulator.isPaused()){
+        @helper.form(action = SimulatorController.gotoNextPause) {
+            <input type="datetime-local" value="2014-06-14T00:00" name="date">
+            <button id="ok" name="ok" type="submit" class="btn btn-primary">
+                <i class="glyphicon glyphicon-fast-forward"></i> Go To
+            </button>
         }
     }
 }
