--- a/admin/app/views/template_match_event.scala.html
+++ b/admin/app/views/template_match_event.scala.html
@@ -16,6 +16,7 @@
             <th>Name</th>
             <th>Field Pos</th>
             <th>Salary</th>
+            <th>Played Matches</th>
             <th>Fantasy Points</th>
         </tr>
         </thead>
@@ -26,6 +27,7 @@
             <td>@p.name</td>
             <td>@p.fieldPos</td>
             <td>@p.salary</td>
+            <td>@p.playedMatches</td>
             <td>@p.fantasyPoints</td>
         </tr>
         }
@@ -39,6 +41,7 @@
             <th>Name</th>
             <th>Field Pos</th>
             <th>Salary</th>
+            <th>Played Matches</th>
             <th>Fantasy Points</th>
         </tr>
         </thead>
@@ -49,6 +52,7 @@
             <td>@p.name</td>
             <td>@p.fieldPos</td>
             <td>@p.salary</td>
+            <td>@p.playedMatches</td>
             <td>@p.fantasyPoints</td>
         </tr>
         }
