User: view: + "userId" - "password" - "createdAt"
El view al cliente, de un user, incluirá su identificador, pero no el "password" ni el "createdAt".

--- a/admin/app/views/user_list.scala.html
+++ b/admin/app/views/user_list.scala.html
@@ -24,7 +24,7 @@
         <tbody>
         @for(p <- users) {
         <tr>
-            <td>@p._id</td>
+            <td>@p.userId</td>
             <td>@p.firstName</td>
             <td>@p.lastName</td>
             <td>@p.nickName</td>
