--- a/admin/app/views/main.scala.html
+++ b/admin/app/views/main.scala.html
@@ -40,6 +40,7 @@
     <!-- Custom styles for this template -->
     <!-- link href="http://getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet" -->
     <link href="/css/dashboard.css" rel="stylesheet">
+    <link href="/css/simulator-btn.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
